--- a/src/main/resources/view/MarksGroupPopup.fxml
+++ b/src/main/resources/view/MarksGroupPopup.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="604.0" prefWidth="757.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lifehouse.raceth.gui.MarksGroupPopupController">
+<AnchorPane prefHeight="604.0" prefWidth="757.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lifehouse.raceth.gui.marksmonitorpage.MarksGroupPopupController">
    <children>
       <Label contentDisplay="CENTER" layoutX="30.0" layoutY="8.0" prefHeight="66.0" prefWidth="423.0" text="Добавление стартов в заезд" textFill="#305ec1">
          <font>
