--- a/src/main/resources/view/CompetitionPage.fxml
+++ b/src/main/resources/view/CompetitionPage.fxml
@@ -46,7 +46,7 @@
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                      </columnResizePolicy>
                   </TableView>
-                  <GridPane alignment="BOTTOM_LEFT" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="189.0" prefWidth="220.0" GridPane.columnIndex="1">
+                  <GridPane alignment="BOTTOM_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="220.0" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.valignment="BOTTOM">
                      <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="34.0" />
                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="34.0" />
@@ -116,7 +116,7 @@
                               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                            </columnResizePolicy>
                         </TableView>
-                        <GridPane layoutX="10.0" layoutY="230.0" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="220.0">
+                        <GridPane alignment="BOTTOM_LEFT" layoutX="10.0" layoutY="230.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="220.0">
                            <columnConstraints>
                               <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="34.0" />
                               <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="34.0" />
@@ -168,6 +168,9 @@
                               </Button>
                               <TextField fx:id="searchGroupTextField" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="26.0" prefWidth="108.0" promptText="поиск" stylesheets="@css/TextField.css" GridPane.columnIndex="3" GridPane.halignment="CENTER" />
                            </children>
+                           <padding>
+                              <Insets bottom="10.0" left="10.0" />
+                           </padding>
                         </GridPane>
                      </children>
                   </Pane>
@@ -187,7 +190,7 @@
                      <TableColumn fx:id="cMainSecretaryColumn" maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="178.0" text="Главный секретарь" />
                   </columns>
                </TableView>
-               <GridPane layoutX="10.0" layoutY="260.0" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="444.0">
+               <GridPane layoutX="10.0" layoutY="260.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="444.0">
                   <columnConstraints>
                      <ColumnConstraints maxWidth="-Infinity" minWidth="-Infinity" prefWidth="135.0" />
                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="34.0" />
@@ -245,6 +248,9 @@
                         </styleClass>
                      </Button>
                   </children>
+                  <padding>
+                     <Insets bottom="10.0" left="10.0" />
+                  </padding>
                </GridPane>
             </Pane>
          </children>
