--- a/src/main/resources/view/AddPeopleInRelayRunPopup.fxml
+++ b/src/main/resources/view/AddPeopleInRelayRunPopup.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="556.0" prefWidth="593.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lifehouse.raceth.gui.PeopleInRelayRunPopupController">
+<AnchorPane prefHeight="556.0" prefWidth="593.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lifehouse.raceth.logic.relayrunpage.PeopleInRelayRunPopupController">
    <children>
       <Label layoutX="179.0" prefHeight="56.0" prefWidth="235.0" text="Создание участника" textFill="#305ec1">
          <font>
